// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HierarchicalLocationsView /> displays a single location when complete 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header"
            >
              <svg
                className="mdi-icon icon-inline"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                className="result-container__header-divider"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <div>
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/undefined?subtree=true"
                  >
                    <strong>
                      
                    </strong>
                  </a>
                </div>
                <span
                  className="ml-2"
                />
              </div>
              <button
                className="result-container__toggle-matches-container btn btn-sm btn-link px-1 py-0"
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/undefined?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> displays multiple locations grouped by file 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="resizable resizable--right hierarchical-locations-view__resizable"
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="list-group list-group-flush hierarchical-locations-view__list test-hierarchical-locations-view-list"
      >
        <button
          className="list-group-item list-group-item-action hierarchical-locations-view__item active"
          onClick={[Function]}
          type="button"
        >
          <span
            className="hierarchical-locations-view__item-name"
            title="file1.txt"
          >
            <span
              className="hierarchical-locations-view__item-name-text"
            >
              <span
                className=""
              >
                 
                <span>
                  file1.txt
                </span>
              </span>
            </span>
          </span>
          <span
            className="badge badge-secondary badge-pill hierarchical-locations-view__item-badge"
          >
            2
          </span>
        </button>
        <button
          className="list-group-item list-group-item-action hierarchical-locations-view__item "
          onClick={[Function]}
          type="button"
        >
          <span
            className="hierarchical-locations-view__item-name"
            title="file2.txt"
          >
            <span
              className="hierarchical-locations-view__item-name-text"
            >
              <span
                className=""
              >
                 
                <span>
                  file2.txt
                </span>
              </span>
            </span>
          </span>
          <span
            className="badge badge-secondary badge-pill hierarchical-locations-view__item-badge"
          >
            3
          </span>
        </button>
      </div>
      <div
        className="resizable__handle resizable__handle--right "
        onMouseDown={[Function]}
        role="presentation"
      />
    </div>
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header"
            >
              <svg
                className="mdi-icon icon-inline"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                className="result-container__header-divider"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <div>
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/file1.txt?subtree=true"
                  >
                    <strong>
                      file1.txt
                    </strong>
                  </a>
                </div>
                <span
                  className="ml-2"
                />
              </div>
              <button
                className="result-container__toggle-matches-container btn btn-sm btn-link px-1 py-0"
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/file1.txt?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              4
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              5
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> displays partial locations before complete 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header"
            >
              <svg
                className="mdi-icon icon-inline"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                className="result-container__header-divider"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <div>
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/undefined?subtree=true"
                  >
                    <strong>
                      
                    </strong>
                  </a>
                </div>
                <span
                  className="ml-2"
                />
              </div>
              <button
                className="result-container__toggle-matches-container btn btn-sm btn-link px-1 py-0"
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/undefined?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> shows a spinner before any locations emissions 1`] = `
<div
  className="loading-spinner icon-inline m-1 test-loading-spinner"
/>
`;

exports[`<HierarchicalLocationsView /> shows a spinner if locations emits empty and is not complete 1`] = `
<div
  className="loading-spinner icon-inline m-1 test-loading-spinner"
/>
`;
